# SpectrixPC

./: CMakeLists.txt  README.md
libs/: .gitignore  install_libs.sh
shaders/: shadow_fs.glsl  shadow_vs.glsl  specular_fs.glsl  specular_vs.glsl
src/: main.cpp
src/drawable/: normalmap.cpp  objmtlvbo.cpp  shadow.cpp  shadow.h
src/threads/: record_thread.cpp  record_thread.h
src/utils/: res.cpp
src/utils/graphics/: shader.cpp  textures.cpp
